introduction-to-programming/T8/Z3/.gcc.out
/rhome/m/mucanbarli1/workspace/OR/T8/Z3/main.c: In function ‘maxtemp’:
/rhome/m/mucanbarli1/workspace/OR/T8/Z3/main.c:11:4: warning: statement with no effect [-Wunused-value]
    for(q; q<niz+br; q++){
    ^~~
/rhome/m/mucanbarli1/workspace/OR/T8/Z3/main.c:15:10: error: incompatible types when returning type ‘float *’ but ‘float’ was expected
   return p;
          ^
/rhome/m/mucanbarli1/workspace/OR/T8/Z3/main.c: In function ‘prtemp’:
/rhome/m/mucanbarli1/workspace/OR/T8/Z3/main.c:21:3: warning: statement with no effect [-Wunused-value]
   for(p; p<niz+br; p++){
   ^~~
/rhome/m/mucanbarli1/workspace/OR/T8/Z3/main.c: In function ‘maxtemp’:
/rhome/m/mucanbarli1/workspace/OR/T8/Z3/main.c:16:2: warning: control reaches end of non-void function [-Wreturn-type]
  }
  ^
